--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,26 +10,27 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "@tanstack/react-query": "^5.12.0",
-    "axios": "^1.6.2",
-    "zustand": "^4.4.7",
     "@hello-pangea/dnd": "^16.4.0",
-    "sockjs-client": "^1.6.1",
-    "@stomp/stompjs": "^7.0.0",
-    "date-fns": "^2.30.0",
-    "react-hook-form": "^7.48.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@stomp/stompjs": "^7.0.0",
+    "@tanstack/react-query": "^5.12.0",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^6.20.0",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "lucide-react": "^0.294.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -48,4 +49,3 @@
     "vite": "^5.0.8"
   }
 }
-
