--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -13,7 +13,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: kanban-frontend-htghg4h4e5fbe2fx
   RESOURCE_GROUP: kanban
-  BACKEND_URL: https://kanban-backend-f5epg6agave6hme2.southeastasia-01.azurewebsites.net
+  BACKEND_URL: https://kanban-backend-f5epg6agave6hme2.azurewebsites.net
   NODE_VERSION: '20'
 
 jobs:
