Fix: use resource-group-name instead of resource-group in webapps-deploy

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -51,7 +51,7 @@ jobs:
       uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        resource-group: ${{ env.RESOURCE_GROUP }}
+        resource-group-name: ${{ env.RESOURCE_GROUP }}
         package: ./target/app.jar
         type: jar
         startup-command: 'java -jar /home/site/wwwroot/app.jar --spring.profiles.active=azure --server.port=${PORT:8080}'
