--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -58,7 +58,7 @@ jobs:
       uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        resource-group: ${{ env.RESOURCE_GROUP }}
+        resource-group-name: ${{ env.RESOURCE_GROUP }}
         package: ./frontend/deploy.zip
         type: zip
 
