Fix: update App Service names to match Azure resources

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: kanban-backend-f5epg6agave6hme2
+  AZURE_WEBAPP_NAME: kanban-backend
   RESOURCE_GROUP: kanban
   JAVA_VERSION: '17'
   PACKAGE_NAME: 'kanban-system-1.0.0.jar'
