Make CD depend on CI success: remove continue-on-error and add workflow_run trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,11 +80,9 @@ jobs:
 
     - name: Run linter
       working-directory: ./frontend
-      continue-on-error: true
-      run: npm run lint || echo "Linter warnings found, but continuing..."
+      run: npm run lint
 
     - name: Run tests
       working-directory: ./frontend
-      continue-on-error: true
-      run: npm test -- --run || echo "Some tests failed, but continuing..."
+      run: npm test -- --run
 
