--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,13 +1,13 @@
 name: Deploy Frontend to Azure
 
 on:
-  push:
+  workflow_run:
+    workflows: ["CI - Build and Test"]
+    types:
+      - completed
     branches:
       - main
       - master
-    paths:
-      - 'frontend/**'
-      - '.github/workflows/deploy-frontend.yml'
   workflow_dispatch:
 
 env:
@@ -19,10 +19,19 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    # Only deploy if CI workflow succeeded
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      
+    # If triggered by workflow_run, checkout the commit that triggered CI
+    - name: Checkout CI commit
+      if: github.event_name == 'workflow_run'
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.workflow_run.head_sha }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
