--- a/src/main/resources/application-azure.yml
+++ b/src/main/resources/application-azure.yml
@@ -9,8 +9,8 @@ spring:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://kanban-db.postgres.database.azure.com:5432/kanban_db?sslmode=require}
     # Azure Flexible Server: username only (no @servername suffix)
     # Azure Single Server: username@servername format
-    username: ${SPRING_DATASOURCE_USERNAME:Tyh0912}
-    password: ${SPRING_DATASOURCE_PASSWORD:Tan09120912}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 20
@@ -35,11 +35,11 @@ spring:
 # Update with your Azure frontend URL
 cors:
   allowed:
-    origins: ${CORS_ALLOWED_ORIGINS:https://kanban-frontend-htghg4h4e5fbe2fx.southeastasia-01.azurewebsites.net,http://localhost:5173,http://localhost:3000}
+    origins: ${CORS_ALLOWED_ORIGINS:https://kanban-frontend-htghg4h4e5fbe2fx.southeastasia-01.azurewebsites.net}
 
 # WebSocket Configuration for Azure deployment
 # Update with your Azure frontend URL
 websocket:
   allowed:
-    origins: ${WEBSOCKET_ALLOWED_ORIGINS:https://kanban-frontend-htghg4h4e5fbe2fx.southeastasia-01.azurewebsites.net,http://localhost:5173,http://localhost:3000}
+    origins: ${WEBSOCKET_ALLOWED_ORIGINS:https://kanban-frontend-htghg4h4e5fbe2fx.southeastasia-01.azurewebsites.net}
 
